// Vitest Snapshot v1

exports[`xuanji1 > title & dates 1`] = `
[
  "中国社会各阶级的分析",
  "湖南农民运动考察报告",
  "中国的红色政权为什么能够存在？",
  "井冈山的斗争",
  "关于纠正党内的错误思想",
  "星星之火，可以燎原",
  "必须注意经济工作",
  "怎样分析农村阶级",
  "我们的经济政策",
  "关心群众生活，注意工作方法",
  "论反对日本帝国主义的策略",
  "中国革命战争的战略问题",
  "关于蒋介石声明的声明",
  "中国共产党在抗日时期的任务",
  "为争取千百万群众进入抗日民族统一战线而斗争",
  "实践论",
  "矛盾论",
]
`;

exports[`xuanji1 > title & dates 2`] = `
[
  [
    {
      "day": 1,
      "month": 12,
      "year": 1925,
    },
  ],
  [
    {
      "day": undefined,
      "month": 3,
      "year": 1927,
    },
  ],
  [
    {
      "day": 5,
      "month": 10,
      "year": 1928,
    },
  ],
  [
    {
      "day": 25,
      "month": 11,
      "year": 1928,
    },
  ],
  [
    {
      "day": undefined,
      "month": 12,
      "year": 1929,
    },
  ],
  [
    {
      "day": 5,
      "month": 1,
      "year": 1930,
    },
  ],
  [
    {
      "day": 12,
      "month": 8,
      "year": 1933,
    },
  ],
  [
    {
      "day": undefined,
      "month": 10,
      "year": 1933,
    },
  ],
  [
    {
      "day": undefined,
      "month": 1,
      "year": 1934,
    },
  ],
  [
    {
      "day": 27,
      "month": 1,
      "year": 1934,
    },
  ],
  [
    {
      "day": 27,
      "month": 12,
      "year": 1935,
    },
  ],
  [
    {
      "day": undefined,
      "month": 12,
      "year": 1936,
    },
  ],
  [
    {
      "day": 28,
      "month": 12,
      "year": 1936,
    },
  ],
  [
    {
      "day": 3,
      "month": 5,
      "year": 1937,
    },
  ],
  [
    {
      "day": 8,
      "month": 5,
      "year": 1937,
    },
  ],
  [
    {
      "day": undefined,
      "month": 7,
      "year": 1937,
    },
  ],
  [
    {
      "day": undefined,
      "month": 8,
      "year": 1937,
    },
  ],
]
`;

exports[`xuanji2 > title & dates 1`] = `
[
  "反对日本进攻的方针、办法和前途",
  "为动员一切力量争取抗战胜利而斗争",
  "反对自由主义",
  "国共合作成立后的迫切任务",
  "和英国记者贝特兰的谈话",
  "上海太原失陷以后抗日战争的形势和任务",
  "陕甘宁边区政府第八路军后方留守处布告",
  "抗日游击战争的战略问题",
  "论持久战",
  "中国共产党在民族战争中的地位",
  "统一战线中的独立自主问题",
  "战争和战略问题",
  "五四运动",
  "青年运动的方向",
  "反对投降活动",
  "必须制裁反动派",
  "关于国际新形势对新华日报记者的谈话",
  "和中央社、扫荡报、新民报三记者的谈话",
  "苏联利益和人类利益的一致",
  "《共产党人》发刊词",
  "目前形势和党的任务",
  "大量吸收知识分子",
  "中国革命和中国共产党",
  "斯大林是中国人民的朋友",
  "纪念白求恩",
  "新民主主义论",
  "克服投降危险，力争时局好转",
  "团结一切抗日力量，反对反共顽固派",
  "向国民党的十点要求",
  "《中国工人》发刊词",
  "必须强调团结和进步",
  "新民主主义的宪政",
  "抗日根据地的政权问题",
  "目前抗日统一战线中的策略问题",
  "放手发展抗日力量，抵抗反共顽固派的进攻",
  "团结到底",
  "论政策",
  "为皖南事变发表的命令和谈话",
  "中国共产党中央革命军事委员会发言人对新华社记者的谈话",
  "打退第二次反共高潮后的时局",
  "关于打退第二次反共高潮的总结",
]
`;

exports[`xuanji2 > title & dates 2`] = `
[
  [
    {
      "day": 23,
      "month": 7,
      "year": 1937,
    },
  ],
  [
    {
      "day": 25,
      "month": 8,
      "year": 1937,
    },
  ],
  [
    {
      "day": 7,
      "month": 9,
      "year": 1937,
    },
  ],
  [
    {
      "day": 29,
      "month": 9,
      "year": 1937,
    },
  ],
  [
    {
      "day": 25,
      "month": 10,
      "year": 1937,
    },
  ],
  [
    {
      "day": 12,
      "month": 11,
      "year": 1937,
    },
  ],
  [
    {
      "day": 15,
      "month": 5,
      "year": 1938,
    },
  ],
  [
    {
      "day": undefined,
      "month": 5,
      "year": 1938,
    },
  ],
  [
    {
      "day": undefined,
      "month": 5,
      "year": 1938,
    },
  ],
  [
    {
      "day": 14,
      "month": 10,
      "year": 1938,
    },
  ],
  [
    {
      "day": 5,
      "month": 11,
      "year": 1938,
    },
  ],
  [
    {
      "day": 6,
      "month": 11,
      "year": 1938,
    },
  ],
  [
    {
      "day": 1,
      "month": 5,
      "year": 1939,
    },
  ],
  [
    {
      "day": 4,
      "month": 5,
      "year": 1939,
    },
  ],
  [
    {
      "day": 30,
      "month": 6,
      "year": 1939,
    },
  ],
  [
    {
      "day": 1,
      "month": 8,
      "year": 1939,
    },
  ],
  [
    {
      "day": 1,
      "month": 9,
      "year": 1939,
    },
  ],
  [
    {
      "day": 16,
      "month": 9,
      "year": 1939,
    },
  ],
  [
    {
      "day": 28,
      "month": 9,
      "year": 1939,
    },
  ],
  [
    {
      "day": 4,
      "month": 10,
      "year": 1939,
    },
  ],
  [
    {
      "day": 10,
      "month": 10,
      "year": 1939,
    },
  ],
  [
    {
      "day": 1,
      "month": 12,
      "year": 1939,
    },
  ],
  [
    {
      "day": undefined,
      "month": 12,
      "year": 1939,
    },
  ],
  [
    {
      "day": 20,
      "month": 12,
      "year": 1939,
    },
  ],
  [
    {
      "day": 21,
      "month": 12,
      "year": 1939,
    },
  ],
  [
    {
      "day": undefined,
      "month": 1,
      "year": 1940,
    },
  ],
  [
    {
      "day": 28,
      "month": 1,
      "year": 1940,
    },
  ],
  [
    {
      "day": 1,
      "month": 2,
      "year": 1940,
    },
  ],
  [
    {
      "day": 1,
      "month": 2,
      "year": 1940,
    },
  ],
  [
    {
      "day": 7,
      "month": 2,
      "year": 1940,
    },
  ],
  [
    {
      "day": 7,
      "month": 2,
      "year": 1940,
    },
  ],
  [
    {
      "day": 20,
      "month": 2,
      "year": 1940,
    },
  ],
  [
    {
      "day": 6,
      "month": 3,
      "year": 1940,
    },
  ],
  [
    {
      "day": 11,
      "month": 3,
      "year": 1940,
    },
  ],
  [
    {
      "day": 4,
      "month": 5,
      "year": 1940,
    },
  ],
  [
    {
      "day": 5,
      "month": 7,
      "year": 1940,
    },
  ],
  [
    {
      "day": 25,
      "month": 12,
      "year": 1940,
    },
  ],
  [
    {
      "day": undefined,
      "month": 1,
      "year": 1941,
    },
  ],
  [
    {
      "day": 22,
      "month": 1,
      "year": 1941,
    },
  ],
  [
    {
      "day": 18,
      "month": 3,
      "year": 1941,
    },
  ],
  [
    {
      "day": 8,
      "month": 5,
      "year": 1941,
    },
  ],
]
`;

exports[`xuanji3 > title & dates 1`] = `
[
  "《农村调查》的序言和跋",
  "改造我们的学习",
  "揭破远东慕尼黑的阴谋",
  "关于反法西斯的国际统一战线",
  "在陕甘宁边区参议会的演说",
  "整顿党的作风",
  "反对党八股",
  "在延安文艺座谈会上的讲话",
  "引言",
  "结论",
  "一个极其重要的政策",
  "第二次世界大战的转折点",
  "祝十月革命二十五周年",
  "抗日时期的经济问题和财政问题",
  "关于领导方法的若干问题",
  "质问国民党",
  "开展根据地的减租、生产和拥政爱民运动",
  "评国民党十一中全会和三届二次国民参政会",
  "组织起来",
  "学习和时局",
  "关于若干历史问题的决议",
  "为人民服务",
  "评蒋介石在双十节的演说",
  "文化工作中的统一战线",
  "必须学会做经济工作",
  "游击区也能够进行生产",
  "两个中国之命运",
  "论联合政府",
  "愚公移山",
  "论军队生产自给，兼论整风和生产两大运动的重要性",
  "赫尔利和蒋介石的双簧已经破产",
  "评赫尔利政策的危险",
  "给福斯特同志的电报",
  "对日寇的最后一战",
]
`;

exports[`xuanji3 > title & dates 2`] = `
[
  [
    {
      "day": undefined,
      "month": 3,
      "year": 1941,
    },
    {
      "day": undefined,
      "month": 4,
      "year": 1941,
    },
  ],
  [
    {
      "day": 19,
      "month": 5,
      "year": 1941,
    },
  ],
  [
    {
      "day": 25,
      "month": 5,
      "year": 1941,
    },
  ],
  [
    {
      "day": 23,
      "month": 6,
      "year": 1941,
    },
  ],
  [
    {
      "day": 21,
      "month": 11,
      "year": 1941,
    },
  ],
  [
    {
      "day": 1,
      "month": 2,
      "year": 1942,
    },
  ],
  [
    {
      "day": 8,
      "month": 2,
      "year": 1942,
    },
  ],
  [
    {
      "day": undefined,
      "month": 5,
      "year": 1942,
    },
  ],
  [
    {
      "day": 2,
      "month": 5,
      "year": 1942,
    },
  ],
  [
    {
      "day": 23,
      "month": 5,
      "year": 1942,
    },
  ],
  [
    {
      "day": 7,
      "month": 9,
      "year": 1942,
    },
  ],
  [
    {
      "day": 12,
      "month": 10,
      "year": 1942,
    },
  ],
  [
    {
      "day": 6,
      "month": 11,
      "year": 1942,
    },
  ],
  [
    {
      "day": undefined,
      "month": 12,
      "year": 1942,
    },
  ],
  [
    {
      "day": 1,
      "month": 6,
      "year": 1943,
    },
  ],
  [
    {
      "day": 12,
      "month": 7,
      "year": 1943,
    },
  ],
  [
    {
      "day": 1,
      "month": 10,
      "year": 1943,
    },
  ],
  [
    {
      "day": 5,
      "month": 10,
      "year": 1943,
    },
  ],
  [
    {
      "day": 29,
      "month": 11,
      "year": 1943,
    },
  ],
  [
    {
      "day": 12,
      "month": 4,
      "year": 1944,
    },
  ],
  [
    {
      "day": 20,
      "month": 4,
      "year": 1945,
    },
  ],
  [
    {
      "day": 8,
      "month": 9,
      "year": 1944,
    },
  ],
  [
    {
      "day": 11,
      "month": 10,
      "year": 1944,
    },
  ],
  [
    {
      "day": 30,
      "month": 10,
      "year": 1944,
    },
  ],
  [
    {
      "day": 10,
      "month": 1,
      "year": 1945,
    },
  ],
  [
    {
      "day": 31,
      "month": 1,
      "year": 1945,
    },
  ],
  [
    {
      "day": 23,
      "month": 4,
      "year": 1945,
    },
  ],
  [
    {
      "day": 24,
      "month": 4,
      "year": 1945,
    },
  ],
  [
    {
      "day": 11,
      "month": 6,
      "year": 1945,
    },
  ],
  [
    {
      "day": 27,
      "month": 4,
      "year": 1945,
    },
  ],
  [
    {
      "day": 10,
      "month": 7,
      "year": 1945,
    },
  ],
  [
    {
      "day": 12,
      "month": 7,
      "year": 1945,
    },
  ],
  [
    {
      "day": 29,
      "month": 7,
      "year": 1945,
    },
  ],
  [
    {
      "day": 9,
      "month": 8,
      "year": 1945,
    },
  ],
]
`;

exports[`xuanji4 > title & dates 1`] = `
[
  "抗日战争胜利后的时局和我们的方针",
  "蒋介石在挑动内战",
  "第十八集团军总司令给蒋介石的两个电报",
  "评蒋介石发言人谈话",
  "中共中央关于同国民党进行和平谈判的通知",
  "关于重庆谈判",
  "国民党进攻的真相",
  "减租和生产是保卫解放区的两件大事",
  "一九四六年解放区工作的方针",
  "建立巩固的东北根据地",
  "关于目前国际形势的几点估计",
  "以自卫战争粉碎蒋介石的进攻",
  "和美国记者安娜·路易斯·斯特朗的谈话",
  "集中优势兵力，各个歼灭敌人",
  "美国“调解”真相和中国内战前途——和美国记者斯蒂尔的谈话",
  "三个月总结",
  "迎接中国革命的新高潮",
  "中共中央关于暂时放弃延安和保卫陕甘宁边区的两个文件",
  "关于西北战场的作战方针",
  "蒋介石政府已处在全民的包围中",
  "解放战争第二年的战略方针",
  "中国人民解放军宣言",
  "中国人民解放军总部关于重行颁布三大纪律八项注意的训令",
  "目前形势和我们的任务",
  "关于建立报告制度",
  "关于目前党的政策中的几个重要问题",
  "军队内部的民主运动",
  "在不同地区实施土地法的不同策略",
  "纠正土地改革宣传中的“左”倾错误",
  "新解放区土地改革要点",
  "关于工商业政策",
  "关于民族资产阶级和开明绅士问题",
  "评西北大捷兼论解放军的新式整军运动",
  "关于情况的通报",
  "在晋绥干部会议上的讲话",
  "对晋绥日报编辑人员的谈话",
  "再克洛阳后给洛阳前线指挥部的电报",
  "新解放区农村工作的策略问题",
  "一九四八年的土地改革工作和整党工作",
  "关于辽沈战役的作战方针",
  "关于健全党委制",
  "中共中央关于九月会议的通知",
  "关于淮海战役的的作战方针",
  "全世界革命力量团结起来，反对帝国主义的侵略",
  "中国军事形势的重大变化",
  "关于平津战役的作战方针",
  "敦促杜聿明等投降书",
  "将革命进行到底",
  "评战犯求和",
  "中共中央毛泽东主席关于时局的声明",
  "中共发言人评南京行政院的决议",
  "中共发言人关于命令国民党反动政府重新逮捕前日本侵华军总司令冈村宁次和逮捕国民党内战罪犯的谈话",
  "中共发言人关于和平条件必须包括惩办日本战犯和国民党战犯的声明",
  "把军队变为工作队",
  "四分五裂的反动派为什么还要空喊“全面和平”？",
  "国民党反动派由“呼吁和平”变为呼吁战争",
  "评国民党对战争责任问题的几种答案",
  "在中国共产党第七届中央委员会第二次全体会议上的报告",
  "党委会的工作方法",
  "南京政府向何处去？",
  "向全国进军的命令",
  "中国人民解放军布告",
  "中国人民解放军总部发言人为英国军舰暴行发表的声明",
  "在新政治协商会议筹备会上的讲话",
  "论人民民主专政纪念中国共产党二十八周年",
  "丢掉幻想，准备斗争",
  "别了，司徒雷登",
  "为什么要讨论白皮书？",
  "“友谊”，还是侵略？",
  "唯心历史观的破产",
]
`;

exports[`xuanji4 > title & dates 2`] = `
[
  [
    {
      "day": 13,
      "month": 8,
      "year": 1945,
    },
  ],
  [
    {
      "day": 13,
      "month": 8,
      "year": 1945,
    },
  ],
  [
    {
      "day": undefined,
      "month": 8,
      "year": 1945,
    },
  ],
  [
    {
      "day": 16,
      "month": 8,
      "year": 1945,
    },
  ],
  [
    {
      "day": 26,
      "month": 8,
      "year": 1945,
    },
  ],
  [
    {
      "day": 17,
      "month": 10,
      "year": 1945,
    },
  ],
  [
    {
      "day": 5,
      "month": 11,
      "year": 1945,
    },
  ],
  [
    {
      "day": 7,
      "month": 11,
      "year": 1945,
    },
  ],
  [
    {
      "day": 15,
      "month": 12,
      "year": 1945,
    },
  ],
  [
    {
      "day": 28,
      "month": 12,
      "year": 1945,
    },
  ],
  [
    {
      "day": undefined,
      "month": 4,
      "year": 1946,
    },
  ],
  [
    {
      "day": 20,
      "month": 7,
      "year": 1946,
    },
  ],
  [
    {
      "day": 6,
      "month": 8,
      "year": 1946,
    },
  ],
  [
    {
      "day": 16,
      "month": 9,
      "year": 1946,
    },
  ],
  [
    {
      "day": 29,
      "month": 9,
      "year": 1946,
    },
  ],
  [
    {
      "day": 1,
      "month": 10,
      "year": 1946,
    },
  ],
  [
    {
      "day": 1,
      "month": 2,
      "year": 1947,
    },
  ],
  [
    {
      "day": undefined,
      "month": 11,
      "year": 1946,
    },
    {
      "day": undefined,
      "month": 4,
      "year": 1947,
    },
  ],
  [
    {
      "day": 15,
      "month": 4,
      "year": 1947,
    },
  ],
  [
    {
      "day": 30,
      "month": 5,
      "year": 1947,
    },
  ],
  [
    {
      "day": 1,
      "month": 9,
      "year": 1947,
    },
  ],
  [
    {
      "day": 10,
      "month": 10,
      "year": 1947,
    },
  ],
  [
    {
      "day": 10,
      "month": 10,
      "year": 1947,
    },
  ],
  [
    {
      "day": 25,
      "month": 12,
      "year": 1947,
    },
  ],
  [
    {
      "day": 7,
      "month": 1,
      "year": 1948,
    },
  ],
  [
    {
      "day": 18,
      "month": 1,
      "year": 1948,
    },
  ],
  [
    {
      "day": 30,
      "month": 1,
      "year": 1948,
    },
  ],
  [
    {
      "day": 3,
      "month": 2,
      "year": 1948,
    },
  ],
  [
    {
      "day": 11,
      "month": 2,
      "year": 1948,
    },
  ],
  [
    {
      "day": 15,
      "month": 2,
      "year": 1948,
    },
  ],
  [
    {
      "day": 27,
      "month": 2,
      "year": 1948,
    },
  ],
  [
    {
      "day": 1,
      "month": 3,
      "year": 1948,
    },
  ],
  [
    {
      "day": 7,
      "month": 3,
      "year": 1948,
    },
  ],
  [
    {
      "day": 20,
      "month": 3,
      "year": 1948,
    },
  ],
  [
    {
      "day": 1,
      "month": 4,
      "year": 1948,
    },
  ],
  [
    {
      "day": 2,
      "month": 4,
      "year": 1948,
    },
  ],
  [
    {
      "day": 8,
      "month": 4,
      "year": 1948,
    },
  ],
  [
    {
      "day": 24,
      "month": 5,
      "year": 1948,
    },
  ],
  [
    {
      "day": 25,
      "month": 5,
      "year": 1948,
    },
  ],
  [
    {
      "day": undefined,
      "month": 9,
      "year": 1948,
    },
    {
      "day": undefined,
      "month": 10,
      "year": 1948,
    },
  ],
  [
    {
      "day": 20,
      "month": 9,
      "year": 1948,
    },
  ],
  [
    {
      "day": 10,
      "month": 10,
      "year": 1948,
    },
  ],
  [
    {
      "day": 11,
      "month": 10,
      "year": 1948,
    },
  ],
  [
    {
      "day": undefined,
      "month": 11,
      "year": 1948,
    },
  ],
  [
    {
      "day": 14,
      "month": 11,
      "year": 1948,
    },
  ],
  [
    {
      "day": 11,
      "month": 12,
      "year": 1948,
    },
  ],
  [
    {
      "day": 17,
      "month": 12,
      "year": 1948,
    },
  ],
  [
    {
      "day": 30,
      "month": 12,
      "year": 1948,
    },
  ],
  [
    {
      "day": 4,
      "month": 1,
      "year": 1949,
    },
  ],
  [
    {
      "day": 14,
      "month": 1,
      "year": 1949,
    },
  ],
  [
    {
      "day": 21,
      "month": 1,
      "year": 1949,
    },
  ],
  [
    {
      "day": 28,
      "month": 1,
      "year": 1949,
    },
  ],
  [
    {
      "day": 5,
      "month": 2,
      "year": 1949,
    },
  ],
  [
    {
      "day": 8,
      "month": 2,
      "year": 1949,
    },
  ],
  [
    {
      "day": 15,
      "month": 2,
      "year": 1949,
    },
  ],
  [
    {
      "day": 16,
      "month": 2,
      "year": 1949,
    },
  ],
  [
    {
      "day": 18,
      "month": 2,
      "year": 1949,
    },
  ],
  [
    {
      "day": 5,
      "month": 3,
      "year": 1949,
    },
  ],
  [
    {
      "day": 13,
      "month": 3,
      "year": 1949,
    },
  ],
  [
    {
      "day": 4,
      "month": 4,
      "year": 1949,
    },
  ],
  [
    {
      "day": 21,
      "month": 4,
      "year": 1949,
    },
  ],
  [
    {
      "day": 25,
      "month": 4,
      "year": 1949,
    },
  ],
  [
    {
      "day": 30,
      "month": 4,
      "year": 1949,
    },
  ],
  [
    {
      "day": 15,
      "month": 6,
      "year": 1949,
    },
  ],
  [
    {
      "day": 30,
      "month": 6,
      "year": 1949,
    },
  ],
  [
    {
      "day": 14,
      "month": 8,
      "year": 1949,
    },
  ],
  [
    {
      "day": 18,
      "month": 8,
      "year": 1949,
    },
  ],
  [
    {
      "day": 28,
      "month": 8,
      "year": 1949,
    },
  ],
  [
    {
      "day": 30,
      "month": 8,
      "year": 1949,
    },
  ],
  [
    {
      "day": 16,
      "month": 9,
      "year": 1949,
    },
  ],
]
`;
